[add] JWT middleware & authorization user login function;
