# controller/order_ct.go
@@ -17,6 +17,7 @@ import (
 // @param starttime query string false "開始時間 (yyyy-MM-dd)" default(2001-01-01)
 // @param endtime query string false "結束時間 (yyyy-MM-dd)" default(2001-01-02)
 // @param top query int false "取前幾筆" default(10)
+// @Security BearerAuth
 // @Success 200 {object} []vo.OrderVO
 // @Router /order [get]
 func OrderGetList(ctx *gin.Context) {
@@ -33,6 +34,7 @@ func OrderGetList(ctx *gin.Context) {
 // @Tags trade
 // @Produce  json
 // @param id path int true "編號"
+// @Security BearerAuth
 // @Success 200 {object} vo.OrderVO
 // @Router /order/{id} [get]
 func OrderGet(ctx *gin.Context) {
@@ -49,6 +51,7 @@ func OrderGet(ctx *gin.Context) {
 // @Accept mpfd
 // @Produce json
 // @param postVO formData vo.OrderPostVO true "formData for OrderPostVO content"
+// @Security BearerAuth
 // @Success 200 {object} vo.OrderVO
 // @Failure 400 {string} string
 // @router /order [post]
@@ -78,6 +81,7 @@ func OrderPost(ctx *gin.Context) {
 // @Produce plain
 // @param id path int true "編號"
 // @param putVO body vo.OrderPutVO true "body for OrderPutVO content"
+// @Security BearerAuth
 // @Success 200 {string} string
 // @Failure 400 {string} string
 // @router /order/{id} [put]
@@ -108,6 +112,7 @@ func OrderPut(ctx *gin.Context) {
 // @Tags trade
 // @Produce plain
 // @param id path int true "編號"
+// @Security BearerAuth
 // @Success 200 {string} string
 // @Failure 400 {string} string
 // @router /order/{id} [delete]
